--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -11,15 +11,15 @@
     --purple-light: #925bc8;
     --purple-dark: #511690;
 
-    --background-color-1: #fafafa;
-    --background-color-2: #f5f5f5;
+    --background-color-1: #f5f5f5;
+    --background-color-2: #eeeaf2;
 
     --text: #11142d;
     --text-sec: #808191;
 
     --shadow-color: rgb(50 50 80 / 6%);
 
-    --white: #fbfbfb;
+    --white: #ffffff;
     --grey: #E4E4E4;
     --green: #83c788;
     --yellow: #ffcf73;
@@ -27,7 +27,7 @@
 }
 
 body {
-    background-color: var(--background-color-2);
+    background-color: var(--background-color-1);
 }
 
 button {
@@ -37,6 +37,53 @@ button {
 
 a {
     text-decoration: none;
+}
+
+a:active {
+    color: var(--purple-dark);
+}
+
+form label {
+    padding-bottom: 4px;
+    font-weight: 500;
+}
+
+form :where(input, textarea, select) {
+    padding: 8px 12px;
+    outline: none;
+    resize: none;
+    border: 2px solid var(--grey);
+    border-radius: 12px;
+}
+
+form :where(input:not(:disabled), textarea, select):focus {
+    border-color: var(--grey);
+    border-bottom-color: var(--purple-light);
+}
+
+main {
+    display: grid;
+    grid-template: 80px auto/ 320px auto;
+    min-height: 100vh;
+    position: relative;
+}
+
+main.close {
+    grid-template-columns: 1fr;
+}
+
+main :is(nav, aside) {
+    position: sticky;
+    top: 0;
+    background-color: var(--white);
+}
+
+.text_primary {
+    color: var(--text);
+}
+
+.text_secondary {
+    color: var(--text-sec);
 }
 
 .flex {
@@ -63,11 +110,11 @@ a {
     flex-direction: column;
 }
 
-.w-full {
+.w_full {
     width: 100%;
 }
 
-.full-container {
+.full_container {
     width: 100vw;
     height: 100vh;
     position: fixed;
@@ -76,39 +123,166 @@ a {
     z-index: 999;
 }
 
-form label {
-    color: var(--text);
-    padding-bottom: 4px;
-}
-
-form :where(input, textarea, select) {
-    padding: 8px 16px;
-    outline: none;
-    resize: none;
-    border: 2px solid transparent;
-    border-bottom-color: var(--grey);
-    background: var(--background-color-2);
-    border-radius: 40px;
-}
-
-form :where(input:not(:disabled), textarea, select):focus {
-    border-color: var(--grey);
-    border-bottom-color: var(--purple-light);
-}
-
-
-.btn {
-    background: var(--purple-light);
+.button {
     border-radius: 50px;
-    color: var(--white);
     transition: transform 200ms ease-in-out;
     padding: 8px 24px;
+    font-weight: 500;
+    border: 1px solid var(--purple-light);
 }
 
-.btn:hover {
+.button.primary {
+    color: var(--white);
+    background-color: var(--purple-light);
+}
+
+.button.secondary {
+    color: var(--purple-light);
+    background-color: var(--white);
+}
+
+.button.round {
+    min-width: 40px;
+    height: 40px;
+    padding: 0;
+}
+
+.button:hover {
     transform: translateY(-1px);
 }
 
-.btn:active {
+.button:active {
     transform: scale(0.98);
+}
+
+
+main .top_nav {
+    grid-column-end: -1;
+    justify-content: space-between;
+    padding-inline: 1em;
+}
+
+.top_nav .greeting {
+    font-size: 1.3em;
+    font-weight: 500;
+}
+
+.top_nav .user_profile .email {
+    font-size: .8em;
+    align-self: flex-start;
+}
+
+.top_nav .user_profile .name {
+    margin: 4px 0 0;
+    font-size: 1.1em;
+    font-weight: 500;
+    line-height: .8em;
+    align-self: flex-start;
+}
+
+.top_nav .menu_toggle {
+    display: none;
+}
+
+main.close .top_nav .menu_toggle {
+    padding-top: 4px;
+    font-size: 1.2em;
+    display: block;
+}
+
+main .side_nav {
+    box-sizing: border-box;
+    grid-row: 1 / -1;
+    height: 100vh;
+    justify-content: space-between;
+    padding-block: 2em;
+    position: relative;
+    transition: 200ms ease;
+}
+
+main.close .side_nav {
+    width: 0;
+    padding: 0;
+    overflow: hidden;
+    position: fixed;
+}
+
+.side_nav .menu_toggle {
+    font-size: 1.2em;
+    position: absolute;
+    right: -20px;
+    top: 60px;
+    z-index: 99;
+}
+
+.side_nav .logo {
+    position: relative;
+    font-size: 2em;
+    text-align: center;
+    font-weight: 600;
+    margin-bottom: 1em;
+}
+
+.side_nav .logo::before {
+    content: '';
+    position: absolute;
+    bottom: -4px;
+    left: 20%;
+    width: 60%;
+    height: 6px;
+    border-radius: 4px;
+    background-color: var(--purple-light);
+}
+
+.side_nav .side_nav_links {
+    justify-content: stretch;
+}
+
+.side_nav .link {
+    border: none;
+    align-self: stretch;
+    justify-content: flex-start;
+    font-weight: 400;
+    color: var(--text-sec);
+    font-size: 1em;
+    background-color: inherit;
+    margin-inline: 1.5em;
+}
+
+.side_nav .link:hover {
+    color: var(--text);
+}
+
+.side_nav .link.active {
+    color: var(--white);
+    background-color: var(--purple-light);
+}
+
+article {
+    height: 200vh;
+}
+
+@media screen and (max-width:820px) {
+
+    main,
+    main.close {
+        grid-template-columns: 1fr;
+    }
+
+    main .side_nav {
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 320px;
+        grid-row: none;
+        z-index: 9;
+    }
+
+    main.close .side_nav {
+        left: -100%;
+    }
+
+    .top_nav .greeting {
+        display: none;
+    }
 }
