--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -11,8 +11,8 @@
     --purple-light: #925bc8;
     --purple-dark: #511690;
 
-    --background-color-1: #f5f5f5;
-    --background-color-2: #eeeaf2;
+    --background-color-1: #fafafa;
+    --background-color-2: #f5f5f5;
 
     --text: #11142d;
     --text-sec: #808191;
@@ -27,7 +27,7 @@
 }
 
 body {
-    background-color: var(--background-color-1);
+    background-color: var(--background-color-2);
 }
 
 button {
@@ -66,6 +66,7 @@ main {
     grid-template: 80px auto/ 320px auto;
     min-height: 100vh;
     position: relative;
+    transition: all 200ms ease-in-out;
 }
 
 main.close {
@@ -75,7 +76,11 @@ main.close {
 main :is(nav, aside) {
     position: sticky;
     top: 0;
-    background-color: var(--white);
+    background-color: var(--background-color-1);
+}
+
+article {
+    padding: 1em;
 }
 
 .text_primary {
@@ -138,7 +143,7 @@ main :is(nav, aside) {
 
 .button.secondary {
     color: var(--purple-light);
-    background-color: var(--white);
+    background-color: var(--background-color-1);
 }
 
 .button.round {
@@ -148,7 +153,7 @@ main :is(nav, aside) {
 }
 
 .button:hover {
-    transform: translateY(-1px);
+    transform: scale(1.02) translateY(-2px);
 }
 
 .button:active {
@@ -161,6 +166,7 @@ main .top_nav {
     justify-content: space-between;
     padding-inline: 1em;
     z-index: 9;
+    box-shadow: 0 0 34px 10px var(--shadow-color);
 }
 
 .top_nav .greeting {
@@ -187,8 +193,9 @@ main .side_nav {
     height: 100vh;
     justify-content: space-between;
     padding-block: 2em;
-    transition: 200ms ease;
+    transition: width 200ms ease;
     z-index: 99;
+    box-shadow: 0 0 14px 4px var(--shadow-color);
 }
 
 .side_nav .menu_toggle {
@@ -199,14 +206,14 @@ main .side_nav {
 }
 
 .side_nav .logo img {
-    height: 40px;
+    height: 36px;
     display: block;
     margin-bottom: -16px;
 }
 
 .side_nav .logo {
     position: relative;
-    font-size: 2em;
+    font-size: 1.6em;
     text-align: center;
     font-weight: 600;
     margin-bottom: 1em;
@@ -236,6 +243,7 @@ main .side_nav {
     font-size: 1em;
     background-color: inherit;
     margin-inline: 1.5em;
+    transition: transform 200ms ease-in-out;
 }
 
 .top_nav .menu_toggle,
@@ -256,10 +264,6 @@ main.close .side_nav .link {
 .side_nav .link.active {
     color: var(--white);
     background-color: var(--purple-light);
-}
-
-article {
-    height: 200vh;
 }
 
 @media screen and (max-width:820px) {
