Add task and search functonality added to tasks page

--- a/frontend/src/styles/auth.module.css
+++ b/frontend/src/styles/auth.module.css
@@ -25,7 +25,7 @@
     width: min(320px, 100%);
 }
 
-.container button[type="submit"] {
+.container .group button[type="submit"] {
     margin: 16px auto -12px;
 }
 
