--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -266,7 +266,41 @@ main.close .side_nav .link {
     background-color: var(--purple-light);
 }
 
-@media screen and (max-width:820px) {
+.modal {
+    backdrop-filter: blur(4px);
+    display: grid;
+    place-items: center;
+    background-color: transparent;
+}
+
+.modal .modal_child {
+    background-color: var(--background-color-1);
+    padding: 1em;
+    border-radius: 8px;
+    width: min(420px, 100%);
+}
+
+.loading {
+    height: 30px;
+    width: 30px;
+    border: 5px solid var(--grey);
+    border-bottom-color: var(--purple-light);
+    border-radius: 50%;
+    margin: 1em;
+    animation: rotate 500ms infinite linear;
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+@media screen and (max-width:980px) {
 
     main,
     main.close {
