Task delete and update functionalities added
- viewTask component added to view task details
- updateTask action added to TaskContext to handle update
- Now only task that are either assignedTo or assignedBy are fetched

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -56,6 +56,14 @@ form :where(input, textarea, select) {
     border-radius: 12px;
 }
 
+form :where(input, textarea, select):disabled {
+    background-color: var(--white);
+    border: none;
+    font-weight: 500;
+    font-size: 1.01em;
+    padding: 0;
+}
+
 form :where(input:not(:disabled), textarea, select):focus {
     border-color: var(--grey);
     border-bottom-color: var(--purple-light);
