--- a/frontend/src/styles/tasks.module.css
+++ b/frontend/src/styles/tasks.module.css
@@ -53,7 +53,7 @@
 }
 
 .wrapper .tasks_container {
-    padding: 0.5em;
+    padding: 1em 0.5em;
     align-items: stretch;
     align-self: stretch;
 }
@@ -61,12 +61,24 @@
 .tasks_container .task {
     border-radius: 12px;
     padding: 12px;
-    cursor: pointer;
+    cursor: grab;
     gap: 4px;
     align-items: stretch;
     background-color: #f1f8ff;
     border-bottom: 0 solid #6dadf0;
     transition: transform 200ms ease;
+    max-width: 420px;
+}
+
+.task .group {
+    justify-content: space-between;
+    align-self: stretch;
+}
+
+.task .group button {
+    padding: 6px 12px;
+    background-color: #6dadf0;
+    border-color: #6dadf0;
 }
 
 .tasks_container .loading {
@@ -82,6 +94,11 @@
     border-bottom-color: #b6b9bd;
 }
 
+.wrapper:first-child .group button {
+    background-color: #b6b9bd;
+    border-color: #b6b9bd;
+}
+
 .wrapper:last-child .task {
     background-color: #e8feef;
     border-bottom: 0 solid #3cc66a;
@@ -89,6 +106,11 @@
 
 .wrapper:last-child .loading {
     border-bottom-color: #3cc66a;
+}
+
+.wrapper:last-child .group button {
+    background-color: #3cc66a;
+    border-color: #3cc66a;
 }
 
 .task_title {
@@ -100,9 +122,9 @@
     max-height: 100px;
 }
 
-.wrapper .task:hover {
-    box-shadow: 0 0 24px 4px var(--shadow-color);
-    transform: scale(1.02);
+.tasks_container .task:hover {
+    box-shadow: 0 0 14px 2px var(--shadow-color);
+    transform: scale(1.01);
     border-bottom-width: 2px;
 }
 
