--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -384,15 +384,16 @@ main.close .side_nav .link {
 .response {
     z-index: 9999;
     align-items: flex-start;
-    backdrop-filter: blur(1px);
+    backdrop-filter: blur(2px);
 }
 
-.response div {
-    background-color: var(--background-color-1);
-    padding: 1em 1.5em;
-    border-radius: 0 0 8px 8px;
+.response>span {
+    background-color: var(--background-color-2);
+    padding: 0.5em 1.5em;
+    border-radius: 48px;
     font-weight: 500;
     border-bottom: 2px solid var(--purple-light);
+    margin-top: 12px;
 }
 
 @keyframes toast {
