--- a/frontend/src/styles/users.module.css
+++ b/frontend/src/styles/users.module.css
@@ -1,30 +1,30 @@
 .container {
     min-height: 75vh;
     background-color: var(--white);
+    border-radius: 12px;
 }
 
 .wrapper {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    display: flex;
     gap: 1em;
     padding: 1em 2em;
-    border-radius: 12px;
 }
 
 .wrapper .user {
     background-color: var(--background-color-1);
     padding: 1em;
     height: fit-content;
-    border-radius: 8px;
-    transition: 200ms ease;
-    max-width: 480px;
+    border-radius: 12px;
+    transition: transform 200ms ease;
+    min-width: 320px;
     justify-content: space-between;
 }
 
 .wrapper .user:hover {
-    box-shadow: 0 0 24px 4px var(--shadow-color);
-    border-bottom: 1px solid var(--purple-light);
+    border-bottom: 2px solid var(--purple-light);
+    box-shadow: 0 0 14px 2px var(--shadow-color);
     transform: scale(1.01);
+    border-radius: 6px;
 }
 
 .wrapper .user button {
