--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -47,7 +47,7 @@
 }
 
 .over.task {
-    border: 2px dashed var(--color);
+    border: 2px dashed var(--color) !important;
     transform: scale(.95);
 }
 
@@ -306,7 +306,7 @@ main.close .side_nav .link {
 
 .modal .modal_child {
     background-color: var(--background-color-1);
-    padding: 1em;
+    padding: 1em 0;
     border-radius: 8px;
     width: min(420px, 100%);
 }
@@ -319,6 +319,14 @@ main.close .side_nav .link {
     border-radius: 50%;
     margin: 1em auto;
     animation: rotate 600ms infinite linear;
+}
+
+button .loading {
+    height: 10px;
+    width: 10px;
+    border: 2px solid var(--white);
+    border-bottom-color: var(--purple-light);
+    margin: 0;
 }
 
 .loader {
