--- a/frontend/src/styles/auth.module.css
+++ b/frontend/src/styles/auth.module.css
@@ -1,7 +1,7 @@
 .container {
-    background-color: var(--background-color-1);
+    background-color: var(--white);
     border-radius: 8px;
-    padding: 4em 1em;
+    padding: 4em 1em 3em;
     width: min(420px, 100%);
     box-shadow: 0px 10px 20px 4px var(--shadow-color);
 }
@@ -19,10 +19,21 @@
 
 .container .group {
     align-items: stretch;
+    position: relative;
 }
 
 .container .form {
     width: min(320px, 100%);
+}
+
+.form .password_eye {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 40px;
+    width: 40px;
+    cursor: pointer;
+    color: var(--text-sec);
 }
 
 .container .group button[type="submit"] {
