--- a/frontend/src/styles/users.module.css
+++ b/frontend/src/styles/users.module.css
@@ -2,33 +2,36 @@
     min-height: 75vh;
     background-color: var(--white);
     border-radius: 12px;
+    padding: 0 1em;
 }
 
 .wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1em;
-    padding: 1em 2em;
+    padding: 1em 0;
+    justify-content: flex-start;
 }
 
 .wrapper .user {
-    background-color: var(--background-color-1);
+    background-color: var(--background-color);
     padding: 1em;
     height: fit-content;
     border-radius: 12px;
-    transition: transform 200ms ease;
-    min-width: 240px;
+    transition: transform 200ms ease-in-out;
+    min-width: min(330px, calc(100% - 2em));
     justify-content: space-between;
 }
 
+.user .user_title {
+    text-transform: capitalize;
+    font-weight: 500;
+    font-size: 1.05em;
+}
+
 .wrapper .user:hover {
-    border-bottom: 2px solid var(--purple-light);
-    box-shadow: 0 0 14px 2px var(--shadow-color);
+    box-shadow: 0 0 12px 2px var(--shadow-color);
     transform: scale(1.01);
-    border-radius: 6px;
 }
 
 .wrapper .user button {
-    margin-top: 1em;
+    margin: auto 0;
     padding: 4px 16px;
 }
