--- a/frontend/src/styles/notifications.module.css
+++ b/frontend/src/styles/notifications.module.css
@@ -8,6 +8,7 @@
     border-radius: 6px;
     align-self: stretch;
     transition: .2s ease;
+    font-size: 0.8em;
 }
 
 .notification:hover {
@@ -32,6 +33,7 @@
 .notification .message {
     font-weight: 600;
     color: var(--color);
+    font-size: 1.2em;
 }
 
 .notification .data>div {
